[tool.poetry]
name = "studydrive-ripper"
version = "0.1.0"
description = ""
authors = ["Artur Dernst <artur@dernst.me>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
flask = "^3.0.3"
requests = "^2.32.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
